--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -2,6 +2,13 @@
 
 <h1>Wines</h1>
 
+<%= cl_image_tag("yeowbokdlagbdaejrhfk",
+      width: 400, height: 300, crop: :fill) %>
+
+<!-- for face detection -->
+<%= cl_image_tag("ekf8k7ixkkya1ovfvvz0",
+      width: 150, height: 150, crop: :thumb, gravity: :face) %>
+
 <table>
   <thead>
     <tr>
