Added photos to clodinary and user is able to upload

--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -60,5 +60,7 @@
   <%= @wine.price %>
 </p>
 
+<%= cl_image_tag @wine.photo.key %>
+
 <%= link_to 'Edit', edit_wine_path(@wine) %> |
 <%= link_to 'Back', root_path %>
