--- a/app/views/wines/_form.html.erb
+++ b/app/views/wines/_form.html.erb
@@ -16,6 +16,7 @@
     <%= f.input :story %>
     <%= f.input :backgroud_image %>
     <%= f.input :price %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
