--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -5,9 +5,7 @@
 <%= cl_image_tag("yeowbokdlagbdaejrhfk",
       width: 400, height: 300, crop: :fill) %>
 
-<!-- for face detection -->
-<%= cl_image_tag("ekf8k7ixkkya1ovfvvz0",
-      width: 150, height: 150, crop: :thumb, gravity: :face) %>
+
 
 <table>
   <thead>
@@ -43,6 +41,9 @@
         <td><%= wine.story %></td>
         <td><%= wine.backgroud_image %></td>
         <td><%= wine.price %></td>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path wine.photo.key, height: 300, width: 400, crop: :fill %>')">
+  Cool Wine
+</div>
         <td><%= link_to 'Show', wine %></td>
         <td><%= link_to 'Edit', edit_wine_path(wine) %></td>
         <td><%= link_to 'Destroy', wine, method: :delete, data: { confirm: 'Are you sure?' } %></td>
