--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -41,7 +41,7 @@
         <td><%= wine.story %></td>
         <td><%= wine.backgroud_image %></td>
         <td><%= wine.price %></td>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path wine.photo.key, height: 300, width: 400, crop: :fill %>')">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path wine.photo.key, height: 700, width: 400 %>')">
   Cool Wine
 </div>
         <td><%= link_to 'Show', wine %></td>
