Created home controller, home view, banner and chaged some routes

--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -63,4 +63,4 @@
 <%= cl_image_tag @wine.photo.key %>
 
 <%= link_to 'Edit', edit_wine_path(@wine) %> |
-<%= link_to 'Back', root_path %>
+<%= link_to 'Back', wines_path %>
