--- a/app/views/wines/edit.html.erb
+++ b/app/views/wines/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', wine: @wine %>
 
 <%= link_to 'Show', @wine %> |
-<%= link_to 'Back', root_path %>
+<%= link_to 'Back', wines_path %>
