--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,9 +3,33 @@
     <h1>VINITY</h1>
     <p>Premium Wine</p>
     <div class= "button-banner">
-    <%= link_to "Catalogo", "#", class: "btn btn-gradient" %>
+    <%= link_to "Catalogo", wines_path, class: "btn btn-gradient" %>
     </div>
   </div>
+</div>
+
+<br>
+
+<div>
+  <h3>Somos 3 emprendedores colombianos y queremos poner a disposición de nuestros clientes los mejores vinos Argentinos, Californianos, Españoles e Italianos.</h3>
+</div>
+
+<br>
+
+<div class="avatar-container">
+  <div>
+   <p>Simón Martinez</p>
+   <%= image_tag "https://kitt.lewagon.com/placeholder/users/arthur-littm", class: "avatar-large", alt: "avatar-large" %>
+  </div>
+  <div>
+   <p>Camila Ghisays</p>
+   <%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-large", alt: "avatar-large" %>
+  </div>
+  <div>
+   <p>Camila Fernandez</p>
+   <%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-large", alt: "avatar-large" %>
+  </div>
+
 </div>
 
 
