--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -1,31 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Wines</h1>
-
-<%= cl_image_tag("yeowbokdlagbdaejrhfk",
-      width: 400, height: 300, crop: :fill) %>
-
-  <% @wines.each do |wine| %>
-
-  <p>Name: <%= wine.name %></p>
-  <p>Winery: <%= wine.winery %></p>
-  <p>Rating: <%= wine.rating %></p>
-  <p>Region: <%= wine.region %></p>
-  <p>Grapes: <%= wine.grapes %></p>
-  <p>Color: <%= wine.color %></p>
-  <p>Wine Style: <%= wine.wine_style %></p>
-  <p>Food Pairing: <%= wine.food_pairing %></p>
-  <p>Year: <%= wine.year %></p>
-  <p>Story: <%= wine.story %></p>
-  <p>Price: <%= wine.price %></p>
-  <%= cl_image_tag wine.photo.key %>
+<h1>Nuestra Oferta en Bogotá</h1>
 
 
-  <p><%= link_to 'Show', wine %></p>
-  <p><%= link_to 'Edit', edit_wine_path(wine) %></p>
-  <p><%= link_to 'Destroy', wine, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-
-  <% end %>
 
 
 
@@ -50,6 +27,10 @@
       <h2> <strong><%= wine.name %></strong></h2>
       <p> <%= wine.color %> from <%= wine.region %></p>
     </div>
+     <p><%= link_to 'Show', wine %></p>
+     <p><%= link_to 'Edit', edit_wine_path(wine) %></p>
+     <p><%= link_to 'Destroy', wine, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+
 </div>
 <% end %>
 
