--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,7 @@
 </div>
 
 <br>
+<br>
 
 <div class="avatar-container">
   <div>
@@ -32,4 +33,18 @@
 
 </div>
 
+<br>
+
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    Aca podemos poner links a instagram, facebook ect.
+  </div>
+</div>
 
