Added country photo attached to enhance cards

--- a/app/views/wines/_form.html.erb
+++ b/app/views/wines/_form.html.erb
@@ -17,6 +17,7 @@
     <%= f.input :backgroud_image %>
     <%= f.input :price %>
     <%= f.input :photo, as: :file %>
+    <%= f.input :country_photo, as: :file %>
   </div>
 
   <div class="form-actions">
