--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -1,5 +1,6 @@
 .card-product-wine{
-  width:250px;
+  padding-left: 50px;
+  width: 330px;
 }
 
 .rating-photo{
@@ -8,11 +9,15 @@
 
 
 .card-product-information{
-  height: 250px;
+  height: 300px;
   background-color: #F7F3F0;
+  width: 200px;
+  text-align: center;
+
 
   h2{
     font-size: 30px;
+    padding-top: 100px;
   }
   p {
     font-size: 15px;
@@ -20,19 +25,57 @@
 }
 
 .card-product-details{
-  height: 150px;
+  height: 120px;
+  background-color: rgb(250,250,250);
+
 
   h2{
+    font-size: 20px;
+    padding-left: 15px;
+
+  }
+
+  p{
+    font-size: 9px;
+    padding-left: 15px;
+  }
+
+  h3{
+    padding-top: 15px;
     font-size: 15px;
+    padding-left: 15px;
   }
 }
 
-.card-product-information{
-  padding-right: 20px;
+.card-product-photo{
+  padding-right: 32px;
+  padding-top: 16px;
+  background-color: #F7F3F0;
+
 
 
  img {
   height: 100%;
   width: 70px;
 }
+}
+
+.country-flag{
+  display: flex;
+}
+
+.avatar-flag{
+  width: 30px;
+  padding-left: 15px;
+  img{
+    width: 15px;
+    border-radius: 50%;
+  }
+}
+
+.origin {
+  p {
+    font-size: 10px;
+    padding-top: 6px;
+  }
 }
