--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -61,6 +61,8 @@
 </p>
 
 <%= cl_image_tag @wine.photo.key %>
+<%= cl_image_tag @wine.country_photo.key %>
+
 
 <%= link_to 'Edit', edit_wine_path(@wine) %> |
 <%= link_to 'Back', wines_path %>
