Changed home banner looks much better :)

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dlj1mjxjd/image/upload/v1596728410/rodrigo-abreu-Cj4CWKQllOM-unsplash_irtyky.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dlj1mjxjd/image/upload/v1596903729/sven-wilhelm-2cRXSWyMHA8-unsplash_eeq0pq.jpg);">
   <div class="container">
     <h1>VINITY</h1>
-    <p>Premium Wine</p>
+    <p>For wine enthusiasts</p>
     <div class= "button-banner">
-    <%= link_to "Catalogo", wines_path, class: "btn btn-gradient" %>
+    <%= link_to "Catalogo", wines_path, class: "btn btn-ghost" %>
     </div>
   </div>
 </div>
