--- a/app/assets/stylesheets/banner.scss
+++ b/app/assets/stylesheets/banner.scss
@@ -8,6 +8,7 @@
 .banner h1 {
   margin: 0;
   color: white;
+  font-family: 'Quattrocento', serif;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
@@ -16,6 +17,7 @@
 .banner p {
   font-size: 20px;
   color: white;
+  font-family: 'Quicksand', sans-serif;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
