--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -1,15 +1,20 @@
 .btn-ghost {
-  color: #4A4A4A;
-  border: 1px solid #4A4A4A;
+  color: rgb(240,240,240);
+  border: 2px solid rgb(240,240,240);
   padding: 8px 24px;
   border-radius: 50px;
+  font-family: 'Quicksand', sans-serif;
+  height:50px;
+  width: 135px;
+  font-size: 20px;
   font-weight: lighter;
   opacity: 0.6;
   transition: opacity 0.3s ease;
 }
 
 .btn-ghost:hover {
-  opacity: 1;
+ color: rgb(200,200,200);
+ border: 2px solid rgb(200,200,200);
 }
 
 .btn-flat {
