--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -1,6 +1,6 @@
 .card-product-wine{
   padding-left: 50px;
-  width: 330px;
+  width: 400px;
 }
 
 .rating-photo{
@@ -17,15 +17,18 @@
 
   h2{
     font-size: 30px;
-    padding-top: 100px;
   }
   p {
+    padding-top: 50px;
     font-size: 15px;
+  }
+  h3{
+    font-size: 25px;
   }
 }
 
 .card-product-details{
-  height: 120px;
+  height: 140px;
   background-color: rgb(250,250,250);
 
 
@@ -50,7 +53,7 @@
 .card-product-photo{
   padding-right: 32px;
   padding-top: 16px;
-  width: 100px;
+  width: 150px;
   background-color: #F7F3F0;
   position: relative;
 
@@ -60,9 +63,9 @@
 
  img {
   height: 100%;
-  width: 75px;
+  width: 90px;
   position: absolute;
-  right: 30px;
+  right: 40px;
   top: 25px;
 }
 }
