--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -6,3 +6,22 @@
 @import "avatar";
 @import "footer";
 
+
+.value-prop{
+  padding-top: 110px;
+  padding-left: 105px;
+  padding-right: 105px;
+  text-align: center;
+
+
+  h3{
+      font-family: 'Quattrocento', serif;
+      font-size: 44px;
+      color: rgb(100,100,100)
+  }
+}
+
+
+.footer{
+  margin-top: 100px;
+}
