--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,9 +8,7 @@
   </div>
 </div>
 
-<br>
-
-<div>
+<div class="value-prop">
   <h3>Somos 3 emprendedores colombianos y queremos poner a disposición de nuestros clientes los mejores vinos Argentinos, Californianos, Españoles e Italianos.</h3>
 </div>
 
@@ -18,15 +16,15 @@
 <br>
 
 <div class="avatar-container">
-  <div>
+  <div class="avatar_details">
    <p>Simón Martinez</p>
    <%= image_tag "https://kitt.lewagon.com/placeholder/users/arthur-littm", class: "avatar-large", alt: "avatar-large" %>
   </div>
-  <div>
+  <div class="avatar_details">
    <p>Camila Ghisays</p>
    <%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-large", alt: "avatar-large" %>
   </div>
-  <div>
+  <div class="avatar_details">
    <p>Camila Fernandez</p>
    <%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-large", alt: "avatar-large" %>
   </div>
@@ -37,14 +35,14 @@
 
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
+
     <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-whatsapp"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+
   </div>
   <div class="footer-copyright">
-    Aca podemos poner links a instagram, facebook ect.
+    Contactanos por Whatsapps para hacer tus pedidos.
   </div>
 </div>
 
