Changes botton font weight

--- a/app/assets/stylesheets/banner.scss
+++ b/app/assets/stylesheets/banner.scss
@@ -10,12 +10,15 @@
   color: white;
   font-family: 'Quattrocento', serif;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
   font-weight: bold;
 }
 
+#banner-title{
+  font-size: 130px;
+}
+
 .banner p {
-  font-size: 20px;
+  font-size: 40px;
   color: white;
   font-family: 'Quicksand', sans-serif;
   opacity: .7;
