--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -1,13 +1,13 @@
 .btn-ghost {
   color: rgb(240,240,240);
-  border: 2px solid rgb(240,240,240);
+  border: 3px solid rgb(240,240,240);
   padding: 8px 24px;
   border-radius: 50px;
   font-family: 'Quicksand', sans-serif;
-  height:50px;
-  width: 135px;
-  font-size: 20px;
-  font-weight: lighter;
+  height:90px;
+  width: 250px;
+  font-size: 40px;
+  font-weight: bold;
   opacity: 0.6;
   transition: opacity 0.3s ease;
 }
