--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dlj1mjxjd/image/upload/v1596903729/sven-wilhelm-2cRXSWyMHA8-unsplash_eeq0pq.jpg);">
   <div class="container">
-    <h1>VINITY</h1>
+    <h1 id="banner-title">VINITY</h1>
     <p>For wine enthusiasts</p>
     <div class= "button-banner">
     <%= link_to "Catalogo", wines_path, class: "btn btn-ghost" %>
@@ -42,7 +42,7 @@
 
   </div>
   <div class="footer-copyright">
-    Contactanos por Whatsapps para hacer tus pedidos.
+    Contactanos por Whatsapp para hacer tus pedidos.
   </div>
 </div>
 
