Make banner bigger and added Simon photo to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
 <div class="avatar-container">
   <div class="avatar_details">
    <p>Simón Martinez</p>
-   <%= image_tag "https://kitt.lewagon.com/placeholder/users/arthur-littm", class: "avatar-large", alt: "avatar-large" %>
+   <%= image_tag "https://res.cloudinary.com/dlj1mjxjd/image/upload/v1596925338/vinity_k9gteu.jpg", class: "avatar-large", alt: "avatar-large" %>
   </div>
   <div class="avatar_details">
    <p>Camila Ghisays</p>
