Added migrations fro availability and price as a string, permit those fields and added them to the form

--- a/app/views/wines/_form.html.erb
+++ b/app/views/wines/_form.html.erb
@@ -15,7 +15,8 @@
     <%= f.input :year %>
     <%= f.input :story %>
     <%= f.input :backgroud_image %>
-    <%= f.input :price %>
+    <%= f.input :price_cop %>
+     <%= f.input :availability %>
     <%= f.input :photo, as: :file %>
     <%= f.input :country_photo, as: :file %>
   </div>
