--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -17,7 +17,7 @@
       <div class="card-product-information">
         <p> Rating Vivino </p>
         <h2> <%= wine.rating %></h2>
-        <h3>Price <%= wine.price %> </h3>
+        <h3>Price <%= wine.price_cop %> </h3>
       </div>
       <div class="card-product-photo">
          <%= cl_image_tag wine.photo.key %>
