--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -60,6 +60,16 @@
   <%= @wine.price %>
 </p>
 
+<p>
+  <strong>Price COP:</strong>
+  <%= @wine.price_cop %>
+</p>
+
+<p>
+  <strong>Price COP:</strong>
+  <%= @wine.availability %>
+</p>
+
 <%= cl_image_tag @wine.photo.key %>
 <%= cl_image_tag @wine.country_photo.key %>
 
