--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -1,6 +1,6 @@
 .btn-ghost {
-  color: rgb(240,240,240);
-  border: 3px solid rgb(240,240,240);
+  color: white;
+  border: 3px solid white;
   padding: 8px 24px;
   border-radius: 50px;
   font-family: 'Quicksand', sans-serif;
@@ -8,7 +8,7 @@
   width: 250px;
   font-size: 40px;
   font-weight: bold;
-  opacity: 0.6;
+  opacity: 0.8;
   transition: opacity 0.3s ease;
 }
 
