--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -52,7 +52,7 @@
 
 <p>
   <strong>Backgroud image:</strong>
-  <%= @wine.backgroud_image %>
+  <%= cl_image_tag @wine.backgroud_image %>
 </p>
 
 <p>
