Changed icons and added links to wa

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,17 @@
 
   <body>
     <%= yield %>
+     <div class="footer">
+      <div class="footer-links">
+
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="wa.link/26kgs7"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://wa.link/a7yccj"><i class="fab fa-whatsapp"></i></a>
+
+      </div>
+      <div class="footer-copyright">
+        Contactanos por Whatsapp para hacer tus pedidos.
+      </div>
+    </div>
   </body>
 </html>
