--- a/app/assets/images/footer.scss
+++ b/app/assets/images/footer.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 150px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
 }
@@ -15,7 +15,7 @@
   color: black;
   opacity: 0.15;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 70px;
   padding: 0px 10px;
 }
 .footer-links a:hover {
@@ -23,4 +23,8 @@
 }
 .footer .fa-heart {
   color: #D23333;
+}
+
+.footer-copyright{
+  font-size: 25px;
 }
