--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -1,13 +1,21 @@
 
+<div class="navbar">
+  <div class="navbar-logo">
+   <%= image_tag "https://www.brandcrowd.com/gallery/brands/pictures/picture1379504466948.jpg" %>
+  </div>
+  <div class="navbar-home">
+   <%= link_to "Home", root_path, class: "btn btn-navbar" %>
+  </div>
 
-<h1>Nuestra Oferta en Bogotá</h1>
+</div>
+
+<h1 class="oferta-bogota">Nuestra Oferta en Bogotá</h1>
 
 
 
 
 
 <br>
-
 
 
 
