--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -44,3 +44,22 @@
   background: linear-gradient(#147EFF, #0F67DA);
   color: white;
 }
+
+.btn-navbar {
+  color: rgb(150,150,150);
+  border: 3px solid rgb(150,150,150);
+  padding: 8px 24px;
+  border-radius: 50px;
+  font-family: 'Quicksand', sans-serif;
+  height:80px;
+  width: 220px;
+  font-size: 35px;
+  font-weight: bold;
+  opacity: 0.8;
+  transition: opacity 0.3s ease;
+}
+
+.btn-navbar:hover {
+ color: rgb(200,200,200);
+ border: 2px solid rgb(200,200,200);
+}
