cards are centered but not in line when in desktop

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -1,5 +1,5 @@
-#wine-container{
-  display: inline-grid;
+#wine-container {
+  display:grid;
   grid-template-columns: auto auto;
   justify-content: center;
 }
