--- a/app/assets/images/footer.scss
+++ b/app/assets/images/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background: #F4F4F4;
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: space-between;
   height: 150px;
@@ -9,13 +9,13 @@
 }
 .footer-links {
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
 .footer-links a {
   color: black;
   opacity: 0.15;
   text-decoration: none;
-  font-size: 70px;
+  font-size: 55px;
   padding: 0px 10px;
 }
 .footer-links a:hover {
@@ -26,5 +26,28 @@
 }
 
 .footer-copyright{
+  font-size: 17px;
+}
+
+@media (min-width: 570px) {
+ .footer {
+  display: flex;
+}
+
+.footer-copyright {
   font-size: 25px;
+}
+
+.footer-links a {
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 70px;
+  padding: 0px 10px;
+}
+
+.footer-links {
+  display: flex;
+  align-items: center;
+}
 }
