--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -4,8 +4,7 @@
 
 
 .card-product-wine{
-  padding-left: 50px;
-  width: 500px;
+  width: 100%;
   padding-top: 50px;
 }
 
@@ -42,7 +41,7 @@
 .card-product-details{
   height: 180px;
   background-color: rgb(250,250,250);
-  width: 430px;
+  width: 100%;
   padding-top: 30px;
 
 
