Added links to wa and added camila fernandez

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
      <div class="footer">
       <div class="footer-links">
 
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/vinitywines/?hl=en"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.link/h4ajs5"><i class="fab fa-whatsapp"></i></a>
         <a href="https://wa.link/26kgs7"><i class="fab fa-whatsapp"></i></a>
         <a href="https://wa.link/a7yccj"><i class="fab fa-whatsapp"></i></a>
 
