--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,6 +1,6 @@
 .navbar{
   display: flex;
-  height: 150px;
+  height: 80px;
   width: 100%;
   background: #F4F4F4;
  justify-content: space-around;
@@ -9,9 +9,30 @@
 .navbar-logo {
   width: 100px;
   img{
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
   }
 }
 
+
+
+@media (min-width: 570px) {
+.navbar-logo {
+  width: 100px;
+  img{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+  }
+}
+
+.navbar{
+  display: flex;
+  height: 100px;
+  width: 100%;
+  background: #F4F4F4;
+ justify-content: space-around;
+}
+
+}
