--- a/app/assets/stylesheets/avatar.scss
+++ b/app/assets/stylesheets/avatar.scss
@@ -1,5 +1,5 @@
 .avatar-large {
-  width: 170px;
+  width: 80px;
   border-radius: 50%;
 }
 
@@ -10,6 +10,9 @@
   color: rgb(100,100,100);
   font-size: 25px;
   padding-top: 50px;
+  padding-right: 5%;
+  padding-left: 5%;
+
   p{
     padding-right: 20px;
     text-align: center;
@@ -20,6 +23,10 @@
   justify-content: center;
   img{
     justify-content: center;
+    margin-left: 15px;
+  }
+  p {
+    font-size: 15px;
   }
 }
 
@@ -40,4 +47,36 @@
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+
+@media (min-width: 570px) {
+ .avatar-large {
+  width: 170px;
+  border-radius: 50%;
+}
+
+.avatar_details{
+  justify-content: center;
+  img{
+    justify-content: center;
+  }
+  p {
+    font-size: 40px;
+  }
+}
+
+.avatar-container{
+  display: flex;
+  justify-content: space-evenly;
+  font-family: 'Quicksand', sans-serif;
+  color: rgb(100,100,100);
+  font-size: 25px;
+  padding-top: 50px;
+
+  p{
+    padding-right: 20px;
+    text-align: center;
+  }
+}
+
 }
