--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -10,6 +10,8 @@
 
 .rating-photo{
   display: flex;
+  width: 100%;
+  background-color: #F7F3F0;
 }
 
 
@@ -111,8 +113,21 @@
 @media (min-width: 570px) {
     #wine-container {
       display:grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
       justify-content: center;
 }
+.card-product-details{
+  height: 180px;
+  background-color: rgb(250,250,250);
+  width: 75%;
+  padding-top: 30px;
+}
+
+.rating-photo{
+  display: flex;
+  width: 75%;
+  background-color: #F7F3F0;
+}
+
 }
 
