--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -11,6 +11,27 @@
 
 
 .value-prop{
+  padding-top: 80px;
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: center;
+
+
+  h3{
+      font-family: 'Quattrocento', serif;
+      font-size: 20px;
+      color: rgb(100,100,100)
+  }
+}
+
+
+.footer{
+  margin-top: 100px;
+}
+
+
+@media (min-width: 570px) {
+ .value-prop{
   padding-top: 110px;
   padding-left: 105px;
   padding-right: 105px;
@@ -24,7 +45,4 @@
   }
 }
 
-
-.footer{
-  margin-top: 100px;
 }
