--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -11,13 +11,13 @@
 .rating-photo{
   display: flex;
   width: 100%;
-  background-color: #F7F3F0;
+  background-color: #EFEDE8;
 }
 
 
 .card-product-information{
   height: 450px;
-  background-color: #F7F3F0;
+  background-color: #EFEDE8;
   width: 180px;
   text-align: center;
   padding-left:40px;
@@ -37,11 +37,21 @@
     font-size: 20px;
     font-family: 'Quattrocento', serif;
   }
+  i{
+    color: #781323;
+    font-size: 20px;
+  }
 
 }
 
+.wine-availability{
+  text-align: right;
+  padding-right: 5%;
+  font-family: 'Quattrocento', serif;
+}
+
 .card-product-details{
-  height: 180px;
+  height: 195px;
   background-color: rgb(250,250,250);
   width: 100%;
   padding-top: 30px;
@@ -59,7 +69,7 @@
   }
 
   h3{
-    padding-top: 15px;
+    padding-top: 10px;
     font-size: 15px;
     padding-left: 15px;
   }
@@ -69,12 +79,8 @@
   padding-right: 48px;
   padding-top: 16px;
   width: 250px;
-  background-color: #F7F3F0;
+  background-color: #EFEDE8;
   position: relative;
-
-
-
-
 
  img {
   height: 480px;
@@ -117,7 +123,7 @@
       justify-content: center;
 }
 .card-product-details{
-  height: 180px;
+  height: 195px;
   background-color: rgb(250,250,250);
   width: 75%;
   padding-top: 30px;
@@ -126,7 +132,7 @@
 .rating-photo{
   display: flex;
   width: 75%;
-  background-color: #F7F3F0;
+  background-color: #EFEDE8;
 }
 
 }
