added pictus to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,15 +18,15 @@
 <div class="avatar-container">
   <div class="avatar_details">
    <p>Simón Martinez</p>
-   <%= image_tag "https://res.cloudinary.com/dlj1mjxjd/image/upload/v1596925338/vinity_k9gteu.jpg", class: "avatar-large", alt: "avatar-large" %>
+   <%= image_tag "https://res.cloudinary.com/dlj1mjxjd/image/upload/v1596925338/vinity_k9gteu.jpg", class: "avatar-large", alt: "avatar-large", id: "avatar-founders" %>
   </div>
   <div class="avatar_details">
    <p>Camila Ghisays</p>
-   <%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-large", alt: "avatar-large" %>
+   <%= image_tag "https://res.cloudinary.com/dlj1mjxjd/image/upload/v1597516659/Vinity/cami_ghi_vinity_zd5vs7.jpg", class: "avatar-large", alt: "avatar-large", id: "avatar-founders" %>
   </div>
   <div class="avatar_details">
    <p>Camila Fernandez</p>
-   <%= image_tag "https://kitt.lewagon.com/placeholder/users/sarahlafer", class: "avatar-large", alt: "avatar-large" %>
+   <%= image_tag "https://res.cloudinary.com/dlj1mjxjd/image/upload/v1597516204/Vinity/cami_fer_vinity_3_gcvxx0.jpg", class: "avatar-large", alt: "avatar-large", id: "avatar-founders" %>
   </div>
 
 </div>
