--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -46,7 +46,7 @@
            <p id="availability-wine"><%= wine.availability %></p>
           </div>
       </div>
-       <p><%# link_to 'Show', wine %></p>
+       <p><%= link_to 'Show', wine %></p>
        <p id ="order-now">Order now  <a href="https://wa.link/h4ajs5"><i class="fab fa-whatsapp"></i></a></p>
     </div>
 
