--- a/app/assets/stylesheets/avatar.scss
+++ b/app/assets/stylesheets/avatar.scss
@@ -1,3 +1,8 @@
+#avatar-founders{
+  width: 80px;
+  height: 85px;
+}
+
 .avatar-large {
   width: 80px;
   border-radius: 50%;
@@ -77,6 +82,12 @@
     padding-right: 20px;
     text-align: center;
   }
+}
+
+#avatar-founders{
+  width: 170px;
+  height: 180px;
+  margin-left: 50px;
 }
 
 }
