--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h1 id="banner-title">VINITY</h1>
     <p>For wine enthusiasts</p>
     <div class= "button-banner">
-    <%= link_to "Catalogo", wines_path, class: "btn btn-ghost" %>
+    <%= link_to "Catálogo", wines_path, class: "btn btn-ghost" %>
     </div>
   </div>
 </div>
@@ -17,7 +17,7 @@
 
 <div class="avatar-container">
   <div class="avatar_details">
-   <p>Simón Martinez</p>
+   <p>Simón Martínez</p>
    <%= image_tag "https://res.cloudinary.com/dlj1mjxjd/image/upload/v1596925338/vinity_k9gteu.jpg", class: "avatar-large", alt: "avatar-large", id: "avatar-founders" %>
   </div>
   <div class="avatar_details">
@@ -25,7 +25,7 @@
    <%= image_tag "https://res.cloudinary.com/dlj1mjxjd/image/upload/v1597516659/Vinity/cami_ghi_vinity_zd5vs7.jpg", class: "avatar-large", alt: "avatar-large", id: "avatar-founders" %>
   </div>
   <div class="avatar_details">
-   <p>Camila Fernandez</p>
+   <p>Camila Fernández</p>
    <%= image_tag "https://res.cloudinary.com/dlj1mjxjd/image/upload/v1597516204/Vinity/cami_fer_vinity_3_gcvxx0.jpg", class: "avatar-large", alt: "avatar-large", id: "avatar-founders" %>
   </div>
 
