--- a/app/views/wines/new.html.erb
+++ b/app/views/wines/new.html.erb
@@ -1,13 +1,13 @@
 <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown button
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Dropdown button
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+     <% @categories.each do |cat| %>
+      <a class="dropdown-item" href="#"><%=cat.capitalize %></a>
+     <% end %>
+    </div>
   </div>
-</div>
 
 <h1>New Wine</h1>
 
