--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div class="value-prop">
-  <h3>Somos 3 emprendedores colombianos y queremos poner a disposición de nuestros clientes los mejores vinos Argentinos, Californianos, Españoles e Italianos.</h3>
+  <h3>Trabajamos para poner en las manos de nuestro clientes los mejores vinos Argentinos, Californianos, Españoles e Italianos.</h3>
 </div>
 
 <br>
